k8s/study-k8s/kube/tut/ingress/other-attempts/ingress-controller-basic.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: simple-ingress
spec:
   backend:
          serviceName: hello1
          servicePort: 80
